# GritFlow-Backend

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: auth_google.py  secret.py
app/core/: config.py
